[gd_scene load_steps=5 format=3 uid="uid://nokcpb7we5oy"]

[ext_resource type="PackedScene" uid="uid://b6hfjsdk5nre2" path="res://control/tree.tscn" id="1_r4f8t"]
[ext_resource type="Script" path="res://object/dir_access.gd" id="1_t7pw5"]
[ext_resource type="AudioStream" uid="uid://cyhepq5gx5tdc" path="res://assets/kenney_sci-fi-sounds/Audio/computerNoise_000.ogg" id="3_176hq"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_qy2x0"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t7pw5")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 221.0
offset_bottom = 23.0
text = "Path"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.126543
anchor_right = 0.374132
anchor_bottom = 0.91358
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Dirs" parent="HBoxContainer" instance=ExtResource("1_r4f8t")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Files" parent="HBoxContainer" instance=ExtResource("1_r4f8t")]
layout_mode = 2
size_flags_horizontal = 3

[node name="IncludeHidden" type="CheckButton" parent="."]
layout_mode = 0
offset_top = 23.0
offset_right = 163.0
offset_bottom = 54.0
text = "Include hidden"

[node name="IncludeNavigational" type="CheckButton" parent="."]
layout_mode = 0
offset_top = 48.0
offset_right = 205.0
offset_bottom = 79.0
text = "Include navigational"

[node name="CodeEdit" type="CodeEdit" parent="."]
layout_mode = 0
anchor_left = 0.398438
anchor_top = 0.0185185
anchor_right = 0.976562
anchor_bottom = 0.964506
offset_bottom = 1.52588e-05
minimap_draw = true
syntax_highlighter = SubResource("CodeHighlighter_qy2x0")
draw_control_chars = true
draw_tabs = true
draw_spaces = true
symbol_lookup_on_click = true
line_folding = true
gutters_draw_breakpoints_gutter = true
gutters_draw_bookmarks = true
gutters_draw_executing_lines = true
gutters_draw_line_numbers = true
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
anchor_left = 0.398438
anchor_top = 0.0185185
anchor_right = 0.969618
anchor_bottom = 0.964506
offset_right = -3.05176e-05
offset_bottom = 1.52588e-05
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_176hq")

[connection signal="cell_selected" from="HBoxContainer/Dirs" to="." method="_on_dirs_cell_selected"]
[connection signal="item_activated" from="HBoxContainer/Dirs" to="." method="_on_dirs_item_activated"]
[connection signal="cell_selected" from="HBoxContainer/Files" to="." method="_on_files_cell_selected"]
